# server_fan_speed

./: .gitignore  README.md  __main__.py  config.env  docker-compose.yml  index.html  main.py  prepare.sh  pyproject.toml  run-server-fan-speed.sh  server-fan-speed.service  server_fan_speed.code-workspace
